# sct

./: .clang-format  CMakeLists.txt  README.md
include/: sct.h
src/: sct.c
tests/: sct_test.c
